--- a/mediumsanity/package.json
+++ b/mediumsanity/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.29.1",
+    "@sanity/client": "^3.3.0",
     "@sanity/core": "^2.28.1",
     "@sanity/default-layout": "^2.29.1",
     "@sanity/default-login": "^2.29.1",
@@ -27,7 +28,6 @@
     "react-dom": "^17.0",
     "styled-components": "^5.2.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/jaythomasv29/linkedin-lite"
